Arreglos varios para setup inicial Liquibase inicializado, pasado a formato xml